# npbcharger

./: .gitignore  README.md  direct_can_usb.py  examples.py  npb_сommunication.py  pyproject.toml  requirements.txt
.github/workflows/: code_style.yml  run_checks.yml  tests.yml
src/NPB-1700/: npb_communication.py
src/NPB_1700/: commands.py  driver.py  examples.py  services.py
src/NPB_1700/internal/utils/: direct_canusb.py
src/NPB_1700/parsers/: __init__.py  base.py  charge_status.py  chg_status.py  curve_config.py  electricData.py  electric_data.py  factory.py  fault_status.py  system_config.py  system_status.py
src/NPB_1700/parsers/factories/: base_factory.py  status_factory.py
src/npbcharger/: driver.py  examples.py  services.py
src/npbcharger/internal/utils/: direct_canusb.py
src/npbcharger/parsers/: __init__.py  charge_status.py  electric_data.py  fault_status.py
src/npbcharger/parsers/factories/: base_factory.py  config_factory.py  status_factory.py
tests/: test_base_factory.py  test_charge_status_parser.py  test_config_factory.py  test_curve_config.py  test_electric_parser.py  test_fault_status_parser.py  test_status_factory.py  test_system_config.py  test_system_status.py
